--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "express": "^4.17.1",
     "knex": "^0.95.2",
     "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "body-parser": "^1.19.0"
   }
 }
