--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "An todo lists app to organize the life of students",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
