--- a/api/package.json
+++ b/api/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/joaby-oliveira/mingleNotes#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.95.2",
-    "mysql2": "^2.2.5",
-    "body-parser": "^1.19.0"
+    "mysql2": "^2.2.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
